[project]
name = "routingproblemgann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch-geometric>=2.6.1",
    "torch>=2.5.1",
    "tqdm>=4.66.6",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
